# cop4531-a2b

./: .gitignore  CMakeLists.txt  Memoized.cpp  README.md  algorithm.h  main.cpp  makefile
src/: CMakeLists.txt  Dynamic.cpp  LOG.txt  Makefile  Memoized.cpp  algorithm.h  main.cpp
test/: CMakeLists.txt  test.cpp
test/DynamicSolver/: generate_stats.cpp  simple_check.cpp
test/MemoizedSolver/: generate_stats.cpp  simple_check.cpp
test/input/1/: arg2.txt
test/output/: dyn 100 3.txt  dyn 1000 3.txt  dyn 1500 3.txt  mem 100 3.txt  mem 1000 3.txt  mem 1500 3.txt
